# NESkvik

./: .gitignore  CMakeLists.txt  README.md  index.html  tv.glb  web_build.bat
.github/workflows/: ci.yml
assets/: index-ByjLBWTE.js  index-CInkyiD7.js  index-CvMBOeU4.js  index-DqAb6Q6v.js  index-t30sZosJ.js  index-xmrz_35Q.css
core/: emu.cpp  emu.h
core/CPU/: address_modes.cpp  address_modes.h  bus.cpp  bus.h  cpu.cpp  cpu.h  lookup.cpp  lookup.h
core/Mapper/: mapper.cpp  mapper.h  mapper_0.cpp  mapper_0.h
core/PPU/: ppu.cpp  ppu.h  ppu_registers.h
core/ROM/: rom.cpp  rom.h
desktop/: CMakeLists.txt  app.cpp  app.h  framebuffer.cpp  framebuffer.h  gui.cpp  gui.h  main.cpp  window.cpp
desktop/Panels/: control_panel.cpp  control_panel.h  screen_panel.cpp  screen_panel.h
src/: app.h  main.cpp  types.h
src/CPU/: address_modes.cpp  addressing_modes.cpp  bus.cpp  bus.h  cpu.cpp  cpu.h  lookup.cpp  lookup.h  opcodes.cpp  opcodes.h
src/GUI/: gui.h  window.h
src/GUI/Panels/: control_panel.cpp
src/Mapper/: mapper_0.cpp
src/PPU/: ppu.h
tests/: addressing_tests.cpp  cpu_tests.cpp  ppu_tests.cpp  stub_ppu.cpp  stub_rom.cpp
wasm/: CMakeLists.txt  main.cpp  neskvik.wasm  web_build.bat  web_build.sh
web/: .gitignore  CMakeLists.txt  index.html  main.cpp  neskvik.html  neskvik.js  neskvik.wasm  package-lock.json  package.json  vite.config.ts
web/public/: tv.glb
web/src/: App.tsx  index.css
web/src/components/: NeskvikEmulator.tsx  TV.tsx
web/src/shaders/: CRTScreenMaterial.js  crtShader.js
web/src/wasm/: neskvik.d.ts  neskvik.wasm
